# Markers-detection

./: CMakeLists.txt  README.md  output.json
src/: MarkersDetectionClient.cpp  MarkersDetectionClient.cpp.autosave  MarkersDetectionServer.cpp  MultiMarkersDetection.cpp  SingleMarkerDetection.cpp  cameramarkers_client.cpp  cameramarkers_server.cpp  singlemarker.cpp
